--- a/views/oder/order-management.ejs
+++ b/views/oder/order-management.ejs
@@ -36,8 +36,28 @@
                         <tr class="accordion-body" style="display: none;">
                             <td colspan="5">
                                 <div style="background-color: #cff4fc;border-radius: 10px;max-width: 100%;">
-                                    <!-- Thông tin chi tiết về hóa đơn -->
-                                    <!-- ... -->
+                                    <div style="padding: 20px;">
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Mã hóa đơn:</div>
+                                            <label style="margin-left: 10px;"><b><%= transaction._id %></b></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Thời gian:</div>
+                                            <label style="margin-left: 10px;"><%= transaction.thoiGian %></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Khách hàng:</div>
+                                            <label style="margin-left: 10px;"><%= transaction.user.fullname %></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Địa chỉ:</div>
+                                            <label style="margin-left: 10px;"><%= transaction.user.diaChi %></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Trạng thái:</div>
+                                            <label style="margin-left: 10px;">Đã thanh toán</label>
+                                        </div>
+                                    </div>
                                     <div style="padding: 20px;">
                                         <table class="table table-striped table-sm" style="flex-basis: 80%;">
                                             <thead>
@@ -58,7 +78,32 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <!-- ... -->
+                                    <div style="padding-left: 20px;">
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Tổng số lượng:</div>
+                                            <label style="margin-left: 10px;"><b><%= item.soLuong %></b></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Tổng hóa đơn:</div>
+                                            <label style="margin-left: 10px;"><b><%= transaction.tongTien %></b></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Giảm hóa đơn:</div>
+                                            <label style="margin-left: 10px;"></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Khách cần trả:</div>
+                                            <label style="margin-left: 10px;"><b><%= transaction.tongTien %></b></label>
+                                        </div>
+                                        <div style="display: flex;">
+                                            <div style="max-width: 300px">Khách đã trả:</div>
+                                            <label style="margin-left: 10px;"><b><%= transaction.tongTien %></b></label>
+                                        </div>
+                                    </div>
+                                    <div style="padding: 20px;">
+                                        <a href="" class="btn btn-info">Cập nhật</a>
+                                        <a href="" class="btn btn-danger" style="margin-left: 20px;">Hủy hóa đơn</a>
+                                    </div>
                                 </div>
                             </td>
                         </tr>
